--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "dependencies": {
         "katex": "^0.16.22",
@@ -20,7 +22,8 @@
         "react-scripts": "5.0.1"
     },
     "devDependencies": {
-        "tailwindcss": "^3.3.0"
+        "tailwindcss": "^3.3.0",
+        "gh-pages": "^6.1.1"
     },
     "browserslist": {
         "production": [
